clusters/common/apps/home/code-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  annotations:
    tailscale.com/hostname: ${LOCATION}-code-server
    tailscale.com/proxy-group: common-ingress
    tailscale.com/tags: "tag:k8s,tag:${LOCATION}"
spec:
  selector:
    app: code-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8443
  type: LoadBalancer
  loadBalancerClass: tailscale
