clusters/common/apps/home/code-server/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code
  namespace: code-server
  annotations:
    item.homer.rajsingh.info/name: "Code Server"
    item.homer.rajsingh.info/subtitle: "Web-based VS Code"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/code-server.png"
    item.homer.rajsingh.info/keywords: "code, development, editor"

    service.homer.rajsingh.info/name: "Home"
    service.homer.rajsingh.info/icon: "fas fa-home"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "code.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: code-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: code
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: code
  oidc:
    provider:
      issuer: "https://pocket-id.${CLUSTER_DOMAIN}"
    clientID: "6e0ae47f-0ebe-4044-9aae-28e9da38ac3e"
    clientSecret:
      name: "code-server-secret"
    redirectURL: "https://code.${CLUSTER_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
